--- a/persona.html
+++ b/persona.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/persona.css">
 </head>
 <body>
     
@@ -25,8 +25,16 @@
                     <label for="number">Número de cédula</label>
                     <input type="number" name="" id="number" placeholder="cc">
                 </div>
+               
+                    <label for="edad">Edad</label>
+                    <input type="number" id="edad" placeholder="Coloca aqui tu número de consultorio" required>
+                </div>
                 <div>
-                    <label for="special">Especialidad:</label>
+                    <label for="telefono">Teléfono</label>
+                    <input type="number" id="telefono" placeholder="Email de contacto" required>
+                </div>
+                <div>
+                    <label for="special">Especialidad requeridad:</label>
                             <select name="special" id="special">
                                 <option  value="general">Medicina General</option>
                                 <option value="cardiologia">Cardiología</option>
@@ -39,23 +47,16 @@
                             </select required>
                 </div>
                 <div>
-                    <label for="consultorio">Consultorio</label>
-                    <input type="text" id="consultorio" placeholder="Coloca aqui tu número de consultorio" required>
-                </div>
-                <div>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="Email de contacto" required>
-                </div>
 
                 <div>
                     <input type="submit" value="Registrarme" id="confirmation-company">
                 </div>
             </form>
 
-    </section>
+       </section>
     </div>
 
-    <script src="/js/script.js"></script>
+    <script src="/js/persona.js"></script>
 
 </body>
 </html>
