--- a/persona.html
+++ b/persona.html
@@ -9,7 +9,7 @@
 <body>
     
 
-    <div class = "sign-company"><br>
+    <div class = "sign-persona"><br>
         <section>
             <form action="" class="signup-form">
                 <h1 class="h1-regis">Regístrate</h1>
@@ -53,7 +53,7 @@
                 </div>
             </form>
 
-       </section>
+        </section>
     </div>
 
     <script src="/js/persona.js"></script>
